--- a/roles/terminal_applications/defaults/main.yml
+++ b/roles/terminal_applications/defaults/main.yml
@@ -15,6 +15,7 @@ applications_apt:
   - name: btop
   - name: dtrx
   - name: tig
+  - name: 1password-cli
 
 # Applications to be installed using cargo
 applications_cargo:
