--- a/roles/terminal_applications/tasks/main.yml
+++ b/roles/terminal_applications/tasks/main.yml
@@ -39,6 +39,32 @@
     update_cache: yes
   become: yes
 
+- name: Add 1Password APT key
+  ansible.builtin.apt_key:
+    url: https://downloads.1password.com/linux/keys/1password.asc
+    state: present
+  become: yes
+
+- name: Add 1Password APT repository
+  ansible.builtin.apt_repository:
+    repo: "deb [arch={{ ansible_architecture }} signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/{{ ansible_architecture }} stable main"
+    state: present
+  become: yes
+
+- name: Ensure debsig policy directory exists for 1Password
+  ansible.builtin.file:
+    path: /etc/debsig/policies/AC2D62742012EA22/
+    state: directory
+    mode: '0755'
+  become: yes
+
+- name: Add debsig-verify policy for 1Password
+  ansible.builtin.get_url:
+    url: https://downloads.1password.com/linux/debsig/1password.pol
+    dest: /etc/debsig/policies/AC2D62742012EA22/1password.pol
+    mode: '0644'
+  become: yes
+
 - name: Check if rustup is installed
   stat:
     path: "{{ ansible_user_dir }}/.cargo/bin/rustup"
