Update README and main.yml for improved installation instructions and package management
- Clarified playbook execution command in README.md for local runs.
- Enhanced package installation details, including Node.js and 1Password CLI.
- Updated main.yml to include ducker installation with arguments.
- Adjusted shell profile modifications for zoxide integration.

--- a/roles/terminal_applications/defaults/main.yml
+++ b/roles/terminal_applications/defaults/main.yml
@@ -34,10 +34,12 @@ applications_cargo:
   - name: xh
   - name: atac
   - name: presenterm
+  - name: ducker
+    args: --locked
 
 # Applications to be installed using pip
-applications_pip:
-  - ducker
+applications_pip: []
+  # - ducker
   # - thefuck # Incompatible with Python 3.12 (imp module removed)
 
 # Applications to be installed using npm
